# agentic-platform

./: .gitignore  .kube-linter.yaml  CHANGELOG.md  Makefile.custom.mk  README.md  UPGRADE.md  cliff.toml  ct.yaml  release-please-config.json  renovate-custom.json5  renovate.json5
.abs/: main.yaml
.ats/: main.yaml
.circleci/: config.yml  custom.yml  workflows.yml
.github/workflows/: chart-test.yaml
ci/: dex-values.yaml  gitops-values-argo.yaml  gitops-values-flux.yaml
docs/: authentication.md
helm/agentic-platform/: Chart.yaml  values.schema.json  values.yaml
helm/agentic-platform-connectivity/: Chart.yaml  values.schema.json  values.yaml
helm/agentic-platform-connectivity/ci/: test-agent-forward-auth-values.yaml  test-agent-sandbox-values.yaml  test-extra-objects-values.yaml  test-full-stack-values.yaml  test-kagent-jwt-policy-values.yaml  test-klausgateway-obo-values.yaml  test-restricted-values.yaml
helm/agentic-platform-connectivity/templates/: NOTES.txt  _helpers.tpl  namespace.yaml  networkpolicy-muster-mcp-egress-cilium.yaml  validate.yaml
helm/agentic-platform-crds/: Chart.yaml  README.md  values.yaml
helm/agentic-platform-crds/ci/: ci-values.yaml
helm/agentic-platform-crds/templates/: NOTES.txt  _helpers.tpl  ate.dev_actortemplates.yaml  ate.dev_workerpools.yaml
helm/agentic-platform-meta/: Chart.yaml  README.md  values.yaml
helm/agentic-platform-meta/ci/: customer-bom-values.yaml
helm/agentic-platform-meta/templates/: _helpers.tpl  components.yaml  (+1 more)
tests/: test-values.yaml
tests/ats/: pyproject.toml  test_basic_cluster.py
(+87 files in other folders)
