# EXPERIMENT (do not merge): ats runs `uv sync`, but the devctl-generated
# Pipfile here is pipenv-only, so uv can't consume it. This mirrors the Pipfile
# pins as a uv project so the smoke step can run under the pinned ats dev image.
[project]
name = "agentic-platform-ats-tests"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "pytest-helm-charts==1.3.4",
    "pytest==8.4.2",
    "pykube-ng==23.6.0",
    "pytest-rerunfailures==16.3",
    "requests==2.34.2",
]
